--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="header__nav__widget">
 <div class="header__nav__widget__btn">
 </div>
-<a href="https://discord.gg/ktsfgNem26" class="primary-btn">CONTACT</a>
+<a href="https://discord.gg/ktsfgNem26" class="primary-btn">CONTasdasdasdACT</a>
 </div>
 </div>
 </header>
