--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="index.html"><img src="images/logo.png" alt=""></a>
+<a href="index.html"><img src="images/lunar-removebg-preview" alt=""></a>
 </div>
 </div>
 <div class="col-lg-10">
